################################################################################
#                             nxTools - Change Log                             #
################################################################################

nxTools v0.9.12 (XXX XX, 2005):
  FIX: Forgot to remove the invite options from nxTools.cfg.

nxTools v0.9.11 (Aug 11, 2005):
  NEW: Added ::nx::sleep <ms> to nxHelper, to suspend execution for the given time.
  NEW: Request limits for individual users and groups.
  NEW: Rewrote argument parser, supports quoting arguments (e.g. SITE PRE freeware "Some Thing").
  CHG: Improved configuration file parser for invite and pre.
  CHG: Removed SITE BOT command, no longer needed.
  CHG: Removed SITE EDITINV, to make room for a new invite system.
  CHG: Renamed SITE CLEANLOGS to SITE CLEAN and SITE REBUILDLOGS to SITE REBUILD.
  CHG: Split the change log and upgrading instructions into separate files.
  CHG: Switched to a busy callback, instead of the timeout value, for failed
       SQLite transactions. This should improve the dupe checker during heavy traffic.
  CHG: Updated zlib in nxHelper to version 1.2.3.
  CHG: Users cannot fill their own requests.
  FIX: Corrected several errors in the readme.
  FIX: The InvalidArgs error message for request didn't work.

nxTools v0.9.10 (May 24, 2005):
  NEW: Added free and drive totals to the footer of SITE DRIVES.
  NEW: Added custom string comparison functions to TclSQLite, replacing the
       user-defined Tcl functions used previously (speeds up dupe checker).
  CHG: Removed the Users.Status column from the nukes database.
  CHG: Rewrote portions of nxHelper, more efficient now.
  CHG: Sitebot specific output is shown as a Tcl list.
  FIX: Argument handling for SITE GIVE/TAKE.
  FIX: Meaningless error when nuking "new" releases (unable to open nuke record).
  FIX: SITE PRETIME and pre time checks were broken.