@@ -205,10 +205,12 @@ set req(Limits) {
 }
 #
 # - Maximum age a filled request is allowed before its wiped, in days.
+# - Requests must be proper release names (e.g. release.name-group).
 # - Physical path to the request directory.
 # - The request and filled tag format, cookies: %(request).
 #
 set req(MaximumAge)     12
+set req(ReleaseNames)   True
 set req(RequestPath)    "E:/ioFTPD/site/REQS"
 set req(RequestTag)     {[REQ]-%(request)}
 set req(FilledTag)      {[FILLED]-%(request)}
